--- a/index.html
+++ b/index.html
@@ -4,8 +4,23 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Tic Tac Toe</title>
+  <link rel="stylesheet" href="styles.css">
+  <script src="script.js" defer></script>
 </head>
 <body>
-  <div class="board"></div>
+  <div class="winningMessage"></div>
+  <div class="container">
+    <div class="board">
+      <button class="cell one"></button>
+      <button class="cell two"></button>
+      <button class="cell three"></button>
+      <button class="cell four"></button>
+      <button class="cell five"></button>
+      <button class="cell six"></button>
+      <button class="cell seven"></button>
+      <button class="cell eight"></button>
+      <button class="cell nine"></button>
+    </div>
+  </div>
 </body>
 </html>
