--- a/index.html
+++ b/index.html
@@ -8,19 +8,9 @@
   <script src="script.js" defer></script>
 </head>
 <body>
-  <div class="winningMessage"></div>
-  <div class="container">
-    <div class="board">
-      <button class="cell one"></button>
-      <button class="cell two"></button>
-      <button class="cell three"></button>
-      <button class="cell four"></button>
-      <button class="cell five"></button>
-      <button class="cell six"></button>
-      <button class="cell seven"></button>
-      <button class="cell eight"></button>
-      <button class="cell nine"></button>
-    </div>
-  </div>
+  <div class="turn"></div>
+  <div class="board"></div>
+  <div class="game-over"></div>
+  <button class="reset-btn" onclick="location.reload()">Reset Game</button>
 </body>
 </html>
